リンク修正

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <h2>Portfolio</h2>
         <ul>
           <li>
-            <a href="Portfolio/js">Studying JavaScript</a>
+            <a href="portfolio/js/index.html">Studying JavaScript</a>
             <ul>
               <li>JavaScriptの学習用ページです。</li>
             </ul>
