サブタイトル改良、フッター改良

--- a/portfolio/js/index.html
+++ b/portfolio/js/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
+        <!-- メタ情報 -->
         <meta charset="UTF-8">
+        <meta name="author" content="S.K" />
+        <!-- デザイン関連 -->
+         <meta name="description" content="S.KによるJavaScriptの学習用ページです。" />
         <meta name="viewport" content="width=device-width" />
         <link href="/styles/destyle.css" rel="stylesheet">
         <link href="/styles/style.css" rel="stylesheet">
