--- a/index.html
+++ b/index.html
@@ -17,82 +17,96 @@
   </header>
 
   <main>
-    <h2>About</h2>
-    <p>このサイトでは私、S.Kのプロフィール並びにポートフォリオを公開しております。</p>
+    <section>
+      <h2>About</h2>
+      <div class="contents">
+      <p>このサイトでは私、S.Kのプロフィール並びにポートフォリオを公開しております。</p>
+      </div>
+    </section>
+    
+    <section>
+      <h2>Profile</h2>
+      <div class="contents">
+      <h3>自己紹介</h3>
+      <p>改めましてS.Kと申します。主にシステムエンジニアとして6年間従事して参りました。皆様どうぞ、よろしくお願いいたします。</p>
+      
+      <h3>Skill's</h3>
+      <h4>言語</h4>
+      <ul>
+        <li>HTML/CSS</li>
+        <li>JavaScript</li>
+        <li>PHP</li>
+        <li>SQL、PL/SQL</li>
+      </ul>
 
-    <h2>Profile</h2>
-    <p>改めましてS.Kと申します。主にシステムエンジニアとして6年間従事して参りました。皆様どうぞ、よろしくお願いいたします。</p>
+      <h4>開発環境</h4>
+      <table>
+        <caption>開発環境についての一覧表</caption>
+        <thead>
+          <tr>
+            <th>項目</th>
+            <th>ツール等</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>OS</td>
+            <td>Windows11</td>
+          </tr>
+          <tr>
+            <td>エディタ</td>
+            <td>Visual Studio Code</td>
+          </tr>
+          <tr>
+            <td>ブラウザ</td>
+            <td>Google Chrome、FireFox</td>
+          </tr>
+          <tr>
+            <td>実行環境</td>
+            <td>Node.js</td>
+          </tr>
+          <tr>
+            <td>バージョン管理</td>
+            <td>Git、GitHub</td>
+          </tr>
+          <tr>
+            <td>AIツール</td>
+            <td>GitHub Copilot</td>
+          </tr>
+        </tbody>
+      </table>
 
-    <h3>スキル</h3>
-    <h4>言語</h4>
-    <ul>
-      <li>HTML/CSS</li>
-      <li>JavaScript</li>
-      <li>PHP</li>
-      <li>SQL、PL/SQL</li>
-    </ul>
+      <h4>これから勉強したいもの</h4>
+      <ul>
+        <li>言語</li>
+        <ul><li>PHP</li></ul>
+        <li>フレームワーク</li>
+        <ul><li>React</li></ul>
+        <ul><li>Laravel</li></ul>
+      </ul>
 
-    <h4>開発環境</h4>
-    <table>
-      <thead>
-        <tr>
-          <th>項目</th>
-          <th>ツール等</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>OS</td>
-          <td>Windows11</td>
-        </tr>
-        <tr>
-          <td>エディタ</td>
-          <td>Visual Studio Code</td>
-        </tr>
-        <tr>
-          <td>ブラウザ</td>
-          <td>Google Chrome、FireFox</td>
-        </tr>
-        <tr>
-          <td>実行環境</td>
-          <td>Node.js</td>
-        </tr>
-        <tr>
-          <td>バージョン管理</td>
-          <td>Git、GitHub</td>
-        </tr>
-        <tr>
-          <td>AIツール</td>
-          <td>GitHub Copilot</td>
-        </tr>
-      </tbody>
-    </table>
+      <h4>学習に使ったサイト・書籍</h4>
+      <ul>
+        <li><a href="https://developer.mozilla.org/ja/docs/Learn_web_development">ウェブ開発の学習 | MDN</a></li>
+      </ul>
+      </div>
+    </section>
 
-    <h4>これから勉強したいもの</h4>
-    <ul>
-      <li>言語</li>
-      <ul><li>PHP</li></ul>
-      <li>フレームワーク</li>
-      <ul><li>React</li></ul>
-      <ul><li>Laravel</li></ul>
-    </ul>
-
-    <h3>学習に使ったサイト・書籍</h3>
-    <ul>
-      <li><a href="https://developer.mozilla.org/ja/docs/Learn_web_development">ウェブ開発の学習 | MDN</a></li>
-    </ul>
-
-    <h2>Portfolio</h2>
-    <ul>
-      <li>
-        <a href="portfolio/js/index.html">Studying JavaScript</a>
-        <ul><li>JavaScriptの学習用ページです。</li></ul>
-      </li>
-    </ul>
+    <section>
+      <h2>Portfolio</h2>
+        <div class="contents">
+          <ul>
+            <li>
+              <a href="portfolio/js/index.html">Studying JavaScript</a>
+              <ul><li>JavaScriptの学習用ページです。</li></ul>
+            </li>
+          </ul>
+        </div>
+    </section>
   </main>
 
   <footer>
-    <p id="footer">&#169; 2025 S.K</p>
+    <small>&#169; 2025 S.K</small>
   </footer>
 </body>
 </html>
