--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+
   <!-- メタ情報 -->
   <meta name="author" content="S.K">
   <meta name="description" content="S.Kによるプロフィール並びにポートフォリオを掲載したサイトです。">
@@ -9,11 +10,17 @@
   <meta name="viewport" content="width=device-width">
   <link href="styles/destyle.css" rel="stylesheet">
   <link href="styles/style.css" rel="stylesheet">
+
   <title>S.K's Portfolio</title>
 </head>
 <body>
   <header>
     <h1>S.K's Portfolio</h1>
+    <nav>
+      <a href="#">About</a>
+      <a href="#">Profile</a>
+      <a href="#">Portfolio</a>
+    </nav>
   </header>
 
   <main>
