仕様書追加、nav修正

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
   <header>
     <h1>S.K's Portfolio</h1>
     <nav>
-      <a href="#">About</a>
-      <a href="#">Profile</a>
-      <a href="#">Portfolio</a>
+      <a href="#About">About</a>
+      <a href="#Profile">Profile</a>
+      <a href="#Portfolio">Portfolio</a>
     </nav>
   </header>
 
   <main>
     <section>
-      <h2>About</h2>
+      <h2 id="About">About</h2>
       <div class="contents">
         <p>このサイトでは私、S.Kのプロフィール並びにポートフォリオを公開しております。</p>
       </div>
     </section>
     
     <section>
-      <h2>Profile</h2>
+      <h2 id="Profile">Profile</h2>
       <div class="contents">
         <h3>自己紹介</h3>
         <p>改めましてS.Kと申します。主にシステムエンジニアとして6年間従事して参りました。皆様どうぞ、よろしくお願いいたします。</p>
@@ -102,7 +102,7 @@
     </section>
 
     <section>
-      <h2>Portfolio</h2>
+      <h2 id="Portfolio">Portfolio</h2>
         <div class="contents">
           <ul>
             <li>
@@ -116,6 +116,11 @@
 
   <footer>
     <small>&#169; 2025 S.K</small>
+    <nav>
+      <a href="#About">About</a>
+      <a href="#Profile">Profile</a>
+      <a href="#Portfolio">Portfolio</a>
+    </nav>
   </footer>
 </body>
 </html>
