学習に使ったサイト・書籍　テーブル化

--- a/index.html
+++ b/index.html
@@ -100,12 +100,45 @@
       </ul>
 
       <h4>学習に使ったサイト・書籍</h4>
-      <ul>
-        <li><a href="https://developer.mozilla.org/ja/docs/Learn_web_development">ウェブ開発の学習 | MDN</a></li>
-        <li>書籍
-          <ul><li>「イラスト図解式　この一冊で全部わかるWeb制作と運用の基本」 - 発行：SBクリエイティブ</li></ul>
-        </li>
-        </ul>
+      <table>
+        <caption>サイト一覧</caption>
+        <thead>
+          <tr>
+            <th>サイト名</th>
+            <th>URL</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>ウェブ開発の学習 | MDN</td>
+            <td><a href="https://developer.mozilla.org/ja/docs/Learn_web_development">https://developer.mozilla.org/ja/docs/Learn_web_development</a></td>
+          </tr>
+          <tr>
+            <td>PHPマニュアル</td>
+            <td><a href="https://www.php.net/manual/ja/index.php">https://www.php.net/manual/ja/index.php</a></td>
+          </tr>
+        </tbody>
+      </table>
+
+      <table>
+        <caption>書籍一覧</caption>
+        <thead>
+          <tr>
+            <th>書籍名</th>
+            <th>出版社</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>イラスト図解式　この一冊で全部わかるWeb制作と運用の基本</td>
+            <td>SBクリエイティブ</td>
+          </tr>
+          <tr>
+            <td>この一冊で全部わかる　ChatGPT & Copilotの教科書</td>
+            <td>SBクリエイティブ</td>
+          </tr>
+        </tbody>
+      </table>
     </section>
 
     <section>
