リンク、リストの変更

--- a/index.html
+++ b/index.html
@@ -86,17 +86,12 @@
 
       <h4>これから勉強したいもの</h4>
       <ul>
-        <li>言語
-          <ul><li>PHP</li></ul>
-        </li>
-        <li>フレームワーク
-          <ul><li>React</li></ul>
-          <ul><li>Laravel</li></ul>
-        </li>
-        <li>その他
-          <ul><li>UI/UX</li></ul>
-          <ul><li>生成AI</li></ul>
-        </li>
+        <li>フレームワーク</li>
+        <li>React</li>
+        <li>Laravel</li>
+        <li>その他</li>
+        <li>UI/UX</li>
+        <li>生成AI</li>
       </ul>
 
       <h4>学習に使ったサイト・書籍</h4>
@@ -146,7 +141,7 @@
         <ul>
           <li>
             <a href="portfolio/js/index.html">Studying JavaScript</a>
-            <ul><li>JavaScriptの学習用ページです。</li></ul>
+            <p>JavaScriptの学習用ページです。</p>
           </li>
         </ul>
     </section>
@@ -160,5 +155,6 @@
       <a href="#Portfolio">Portfolio</a>
     </nav>
   </footer>
+
 </body>
 </html>
