バックカラー修正、JS小修整

--- a/portfolio/js/index.html
+++ b/portfolio/js/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
+
         <!-- メタ情報 -->
         <meta charset="UTF-8">
         <meta name="author" content="S.K" />
+
         <!-- デザイン関連 -->
-         <meta name="description" content="S.KによるJavaScriptの学習用ページです。" />
+        <meta name="description" content="S.KによるJavaScriptの学習用ページです。" />
         <meta name="viewport" content="width=device-width" />
         <link href="/styles/destyle.css" rel="stylesheet">
         <link href="/styles/style.css" rel="stylesheet">
+        <script type="module" src="main.js"></script>
+
         <title>Studying JavaScript - S.K's Portfolio</title>
+        
     </head>
     <body>
         <h1>S.K's Portfolio</h1>
             <h2>Studying JavaScript</h2>
             <p>JavaScriptの学習用ページです。</p>
-        <script src="main.js"></script>
     </body>
 </html>
