--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
   </header>
 
   <main>
-    <section>
+    <section class="back_skyblue">
       <h2 class="slogan">七転八起</h2>
     </section>
-    <section>
+    <section class="back_white">
       <h2 id="About">About</h2>
         <p>このサイトでは私、S.Kのプロフィール並びにポートフォリオを公開しております。</p>
     </section> 
-    <section>
+    <section class="back_white">
       <h2 id="Profile">Profile</h2>
       <h3>自己紹介</h3>
       <p>改めましてS.Kと申します。主にシステムエンジニアとして6年間従事して参りました。
@@ -43,10 +43,10 @@
       <h3>Skill's</h3>
       <h4>言語</h4>
         <ul>
-          <li>HTML/CSS</li>
-          <li>JavaScript</li>
-          <li>PHP</li>
-          <li>SQL、PL/SQL</li>
+          <li class="html_css">HTML/CSS</li>
+          <li class="js">JavaScript</li>
+          <li class="php">PHP</li>
+          <li class="sql">SQL、PL/SQL</li>
         </ul>
 
       <h4>開発環境</h4>
@@ -143,6 +143,8 @@
         <ul>
           <li>
             <a href="portfolio/js/index.html">Studying JavaScript</a>
+          </li>
+          <li>
             <p>JavaScriptの学習用ページです。</p>
           </li>
         </ul>
