--- a/index.html
+++ b/index.html
@@ -20,18 +20,19 @@
       <a href="#About" class="anchor">About</a>
       <a href="#Profile" class="anchor">Profile</a>
       <a href="#Portfolio" class="anchor">Portfolio</a>
+      <a href="https://github.com/portfoliobysk/">GitHub</a>
     </nav>
   </header>
 
   <main>
-    <section class="title_back">
+    <section class="title__back">
       <h2 class="slogan">コードの稜線に、<br>未来の景色を描く</h2>
     </section>
-    <section class="back_white">
+    <section class="back__white">
       <h2 id="About">About</h2>
         <p>皆様初めまして。S.Kと申します。このサイトでは私、S.Kのプロフィール並びにポートフォリオを公開しております。</p>
     </section> 
-    <section class="back_white">
+    <section class="back__white">
       <h2 id="Profile">Profile</h2>
       <h3>自己紹介</h3>
       <p>改めましてS.Kと申します。大学卒業後、主に業務系のシステムエンジニアとして6年間従事して参りました。
@@ -43,9 +44,8 @@
       <h3>Skill's</h3>
       <h4>使用言語</h4>
         <ul>
-          <li class="html_css">HTML/CSS</li>
+          <li class="html__css">HTML/CSS</li>
           <li class="js">JavaScript</li>
-          <li class="php">PHP</li>
           <li class="sql">SQL、PL/SQL</li>
         </ul>
 
@@ -90,10 +90,8 @@
         <ul>
           <li>フレームワーク</li>
           <li>React</li>
-          <li>Laravel</li>
           <li>その他</li>
           <li>UI/UX</li>
-          <li>生成AI</li>
         </ul>
 
       <h4>学習に使ったサイト・書籍</h4>
@@ -158,6 +156,7 @@
       <a href="#About">About</a>
       <a href="#Profile">Profile</a>
       <a href="#Portfolio">Portfolio</a>
+      <a href="https://github.com/portfoliobysk/">GitHub</a>
   </footer>
 
 </body>
