ヘッダー、フッター共通化、デザイン小修整

--- a/index.html
+++ b/index.html
@@ -12,17 +12,12 @@
   <link href="styles/style.css" rel="stylesheet">
 
   <title>S.K's Portfolio</title>
+  <!-- スクリプト -->
+  <script src="scripts/header_footer.js"></script>
 </head>
 <body>
-  <header>
-    <h1>S.K's Portfolio</h1>
-    <nav>
-      <a href="#About" class="anchor">About</a>
-      <a href="#Profile" class="anchor">Profile</a>
-      <a href="#Portfolio" class="anchor">Portfolio</a>
-      <a href="https://github.com/portfoliobysk/">GitHub</a>
-    </nav>
-  </header>
+
+  <header></header>
 
   <main>
     <section class="title__back">
@@ -108,10 +103,6 @@
               <td>ウェブ開発の学習 | MDN</td>
               <td><a href="https://developer.mozilla.org/ja/docs/Learn_web_development">https://developer.mozilla.org/ja/docs/Learn_web_development</a></td>
             </tr>
-            <tr>
-              <td>PHPマニュアル</td>
-              <td><a href="https://www.php.net/manual/ja/index.php">https://www.php.net/manual/ja/index.php</a></td>
-            </tr>
           </tbody>
         </table>
 
@@ -151,13 +142,7 @@
     </section>
   </main>
 
-  <footer>
-    <small>&#169; 2025 S.K</small>
-      <a href="#About">About</a>
-      <a href="#Profile">Profile</a>
-      <a href="#Portfolio">Portfolio</a>
-      <a href="https://github.com/portfoliobysk/">GitHub</a>
-  </footer>
+  <footer></footer>
 
 </body>
 </html>
