--- a/portfolio/js/index.html
+++ b/portfolio/js/index.html
@@ -1,24 +1,38 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
+<head>
 
-        <!-- メタ情報 -->
-        <meta charset="UTF-8">
-        <meta name="author" content="S.K" />
+    <!-- メタ情報 -->
+    <meta charset="UTF-8">
+    <meta name="author" content="S.K" />
 
-        <!-- デザイン関連 -->
-        <meta name="description" content="S.KによるJavaScriptの学習用ページです。" />
-        <meta name="viewport" content="width=device-width" />
-        <link href="/styles/destyle.css" rel="stylesheet">
-        <link href="/styles/style.css" rel="stylesheet">
-        <script type="module" src="main.js"></script>
+    <!-- デザイン関連 -->
+    <meta name="description" content="S.KによるJavaScriptの学習用ページです。" />
+    <meta name="viewport" content="width=device-width" />
+    <link href="../../styles/destyle.css" rel="stylesheet">
+    <link href="../../styles/style.css" rel="stylesheet">
 
-        <title>Studying JavaScript - S.K's Portfolio</title>
-        
-    </head>
-    <body>
-        <h1>S.K's Portfolio</h1>
+    <title>Studying JavaScript - S.K's Portfolio</title>
+
+    <!-- スクリプト -->
+    <script type="module" src="main.js"></script>
+    <script src="../../scripts/header_footer.js"></script>
+
+</head>
+<body>
+
+    <header></header>
+
+    <main>
+        <section>
             <h2>Studying JavaScript</h2>
             <p>JavaScriptの学習用ページです。</p>
-    </body>
+            <input type="button" value="PUSH">
+            <p></p>
+        </section>
+    </main>
+
+    <footer></footer>
+
+</body>
 </html>
