add,update: html道場追加、設計書変更、レスポンシブ対応、topデザイン変更

--- a/index.html
+++ b/index.html
@@ -12,26 +12,31 @@
   <link href="styles/style.css" rel="stylesheet">
 
   <title>S.K's Portfolio</title>
+  
   <!-- スクリプト -->
   <script src="scripts/header_footer.js"></script>
+  
 </head>
 <body>
 
   <header></header>
 
   <main>
+
     <section class="title__back">
       <h2 class="slogan">コードの稜線に、<br>未来の景色を描く</h2>
     </section>
-    <section class="back__white">
+
+    <section class="about__back">
       <h2 id="About">About</h2>
         <p>皆様初めまして。S.Kと申します。このサイトでは私、S.Kのプロフィール並びにポートフォリオを公開しております。</p>
     </section> 
-    <section class="back__white">
+
+    <section class="profile__back">
       <h2 id="Profile">Profile</h2>
       <h3>自己紹介</h3>
       <p>改めましてS.Kと申します。大学卒業後、主に業務系のシステムエンジニアとして6年間従事して参りました。
-        <br>UI/UXから、データベースにも精通するフロントエンジニアを目指しています。
+        <br>UI/UXにも精通するフロントエンジニアを目指しています。
         <br>また、生成AIにも興味があり駆使できる人材を目指しております。
         <br>皆様どうぞ、よろしくお願いいたします。
       </p>
@@ -128,17 +133,25 @@
     </section>
 
     <section class="portfolio">
-      <div>
+      <div id="portfolio">
         <h2 id="Portfolio">Portfolio</h2>
           <ul>
             <li>
-              <a href="portfolio/js/index.html">Studying JavaScript</a>
+              <a href="portfolio/html/">HTML道場</a>
+            </li>
+            <li>
+              <p>HTMLの学習用ページです。</p>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="portfolio/js/">JavaScript道場</a>
             </li>
             <li>
               <p>JavaScriptの学習用ページです。</p>
             </li>
           </ul>
-      </div>
+        </div>
     </section>
   </main>
 
