--- a/portfolio/js/index.html
+++ b/portfolio/js/index.html
@@ -12,7 +12,7 @@
     <link href="../../styles/destyle.css" rel="stylesheet">
     <link href="../../styles/style.css" rel="stylesheet">
 
-    <title>Studying JavaScript - S.K's Portfolio</title>
+    <title>JavaScript道場 - S.K's Portfolio</title>
 
     <!-- スクリプト -->
     <script type="module" src="main.js"></script>
@@ -25,7 +25,7 @@
 
     <main>
         <section>
-            <h2>Studying JavaScript</h2>
+            <h2>JavaScript道場</h2>
             <p>JavaScriptの学習用ページです。</p>
             <input type="button" value="PUSH">
             <p></p>
