add: ロゴ追加、サブページレイアウト作成

--- a/portfolio/html/index.html
+++ b/portfolio/html/index.html
@@ -44,21 +44,22 @@
 
             <h4>解説</h4>
             <h5>DOCTYPE宣言</h5>
+            <pre><code>&lt;!DOCTYPE html&gt;</code></pre>
             <ul>
                 <li>大文字で書いても小文字で書いてもOK（「&lt;!doctype html&gt;でもOK）</li>
                 <li>ただし、htmlの前後に空白を入れることはできるが、!DOCTYPEの部分はそのまま続けて書く必要がある。</li>
             </ul>
         </section>
 
-        <aside class="sidebar__right">
-            <nav>
-                <ol>
-                    <li><a href="#1">HTMLの全体</a></li>
-                </ol>
-            </nav>
-        </aside>
-
     </main>
+
+    <aside>
+        <nav>
+            <ol>
+                <li><a href="#1">HTMLの全体</a></li>
+            </ol>
+        </nav>
+    </aside>
 
     <footer></footer>
 
