--- a/index.html
+++ b/index.html
@@ -29,128 +29,127 @@
 
     <section class="about__back">
       <h2 id="About">About</h2>
-        <p>皆様初めまして。S.Kと申します。このサイトでは私、S.Kのプロフィール並びにポートフォリオを公開しております。</p>
+        <p>
+          ようこそ、S.K's Portfolioへ！<br>
+          このサイトでは主に、フロントエンドエンジニアを目指している私、<strong>S.Kの紹介（経歴、スキル、学習中の内容）並びにポートフォリオ</strong>を公開しております。
+        </p>
     </section> 
 
     <section class="profile__back">
-      <h2 id="Profile">Profile</h2>
-      <h3>自己紹介</h3>
-      <p>改めましてS.Kと申します。大学卒業後、主に業務系のシステムエンジニアとして6年間従事して参りました。
-        <br>UI/UXにも精通するフロントエンジニアを目指しています。
-        <br>また、生成AIにも興味があり駆使できる人材を目指しております。
-        <br>皆様どうぞ、よろしくお願いいたします。
-      </p>
-      
-      <h3>Skill's</h3>
-      <h4>使用言語</h4>
-        <ul>
-          <li class="html__css">HTML/CSS</li>
-          <li class="js">JavaScript</li>
-          <li class="sql">SQL、PL/SQL</li>
-        </ul>
+      <div id="profile">
+        <h2 id="Profile">Profile</h2>
+        <h3>自己紹介</h3>
+        <p>
+          改めましてS.Kと申します。大学の理工系学科卒業後、システムエンジニアとして6年間従事して参りました。主に業務系のシステムを担当し、運用及び一部開発を経験しました。特にデータベース周りの知識を深めることができました。現在はフロントエンドエンジニアを目指し、HTML、CSS、JavaScriptを中心に学習しております。また、設計にも携われるエンジニアを目指しておりUIやUX、ツール（Figma）について日々勉強しています。生成AIにも興味があり、駆使できる人材を目指しております。<br>皆様どうぞ、よろしくお願いいたします。
+        </p>
+        
+        <h3>Skill's</h3>
+        <h4>使用言語</h4>
+          <ul>
+            <li class="html"><img src="images/html.svg" alt="HTML"></li>
+            <li class="css"><img src="images/css.svg" alt="CSS"></li>
+            <li class="js"><img src="images/javascript.svg" alt="JavaScript"></li>
+            <li class="sql">SQL<br>PL/SQL</li>
+          </ul>
 
-      <h4>開発環境</h4>
+        <h4>開発環境</h4>
+          <table>
+            <caption>開発環境についての一覧表</caption>
+            <thead>
+              <tr>
+                <th>項目</th>
+                <th>ツール等</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>OS</td>
+                <td>Windows11</td>
+              </tr>
+              <tr>
+                <td>エディタ</td>
+                <td>Visual Studio Code</td>
+              </tr>
+              <tr>
+                <td>ブラウザ</td>
+                <td>Google Chrome、FireFox</td>
+              </tr>
+              <tr>
+                <td>実行環境</td>
+                <td>Node.js</td>
+              </tr>
+              <tr>
+                <td>バージョン管理</td>
+                <td>Git、GitHub</td>
+              </tr>
+              <tr>
+                <td>AIツール</td>
+                <td>Gemini、GitHub Copilot</td>
+              </tr>
+            </tbody>
+          </table>
+
+        <h4>勉強中のもの</h4>
+          <ul>
+            <li>UI</li>
+            <li>UX</li>
+            <li>Figma</li>
+            <li>React</li>
+            <li>生成AI</li>
+          </ul>
+
+        <h4>学習に使ったサイト・書籍</h4>
+          <table>
+            <caption>サイト一覧</caption>
+            <thead>
+              <tr>
+                <th>サイト名</th>
+                <th>URL</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>ウェブ開発の学習 | MDN</td>
+                <td><a href="https://developer.mozilla.org/ja/docs/Learn_web_development">https://developer.mozilla.org/ja/docs/Learn_web_development</a></td>
+              </tr>
+            </tbody>
+          </table>
+
         <table>
-          <caption>開発環境についての一覧表</caption>
+          <caption>書籍一覧</caption>
           <thead>
             <tr>
-              <th>項目</th>
-              <th>ツール等</th>
+              <th>書籍名</th>
+              <th>出版社</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>OS</td>
-              <td>Windows11</td>
+              <td>イラスト図解式　この一冊で全部わかるWeb制作と運用の基本</td>
+              <td>SBクリエイティブ</td>
             </tr>
             <tr>
-              <td>エディタ</td>
-              <td>Visual Studio Code</td>
-            </tr>
-            <tr>
-              <td>ブラウザ</td>
-              <td>Google Chrome、FireFox</td>
-            </tr>
-            <tr>
-              <td>実行環境</td>
-              <td>Node.js</td>
-            </tr>
-            <tr>
-              <td>バージョン管理</td>
-              <td>Git、GitHub</td>
-            </tr>
-            <tr>
-              <td>AIツール</td>
-              <td>Copilot、GitHub Copilot</td>
+              <td>この一冊で全部わかる　ChatGPT & Copilotの教科書</td>
+              <td>SBクリエイティブ</td>
             </tr>
           </tbody>
         </table>
-
-      <h4>これから勉強したいもの</h4>
-        <ul>
-          <li>フレームワーク</li>
-          <li>React</li>
-          <li>その他</li>
-          <li>UI/UX</li>
-        </ul>
-
-      <h4>学習に使ったサイト・書籍</h4>
-        <table>
-          <caption>サイト一覧</caption>
-          <thead>
-            <tr>
-              <th>サイト名</th>
-              <th>URL</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>ウェブ開発の学習 | MDN</td>
-              <td><a href="https://developer.mozilla.org/ja/docs/Learn_web_development">https://developer.mozilla.org/ja/docs/Learn_web_development</a></td>
-            </tr>
-          </tbody>
-        </table>
-
-      <table>
-        <caption>書籍一覧</caption>
-        <thead>
-          <tr>
-            <th>書籍名</th>
-            <th>出版社</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>イラスト図解式　この一冊で全部わかるWeb制作と運用の基本</td>
-            <td>SBクリエイティブ</td>
-          </tr>
-          <tr>
-            <td>この一冊で全部わかる　ChatGPT & Copilotの教科書</td>
-            <td>SBクリエイティブ</td>
-          </tr>
-        </tbody>
-      </table>
+      </div>
     </section>
 
-    <section class="portfolio">
+    <section class="portfolio__back">
       <div id="portfolio">
         <h2 id="Portfolio">Portfolio</h2>
-          <ul>
-            <li>
+          <dl>
+            <dt>
               <a href="portfolio/html/">HTML道場</a>
-            </li>
-            <li>
-              <p>HTMLの学習用ページです。</p>
-            </li>
-          </ul>
-          <ul>
-            <li>
+            </dt>
+            <dd>HTMLの学習用ページです。</dd>
+            <dt>
               <a href="portfolio/js/">JavaScript道場</a>
-            </li>
-            <li>
-              <p>JavaScriptの学習用ページです。</p>
-            </li>
-          </ul>
+            </dt>
+            <dd>JavaScriptの学習用ページです。</dd>
+          </dl>
         </div>
     </section>
   </main>
