update: ワイヤーフレーム、css共通化

--- a/portfolio/js/index.html
+++ b/portfolio/js/index.html
@@ -10,7 +10,8 @@
     <meta name="description" content="S.KによるJavaScriptの学習用ページです。" />
     <meta name="viewport" content="width=device-width" />
     <link href="../../styles/destyle.css" rel="stylesheet">
-    <link href="../../styles/subpage_style.css" rel="stylesheet">
+    <link href="../../styles/main.css" rel="stylesheet">
+    <link href="../../styles/sub.css" rel="stylesheet">
 
     <title>JavaScript道場 - S.K's Portfolio</title>
 
