--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="styles/destyle.css" rel="stylesheet">
-  <link href="styles/style.css" rel="stylesheet">
+  <link href="styles/main.css" rel="stylesheet">
 
   <title>S.K's Portfolio</title>
   
