update: css大掃除、topページコーディング

--- a/portfolio/js/index.html
+++ b/portfolio/js/index.html
@@ -9,9 +9,11 @@
     <!-- デザイン関連 -->
     <meta name="description" content="S.KによるJavaScriptの学習用ページです。" />
     <meta name="viewport" content="width=device-width" />
-    <link href="../../styles/destyle.css" rel="stylesheet">
-    <link href="../../styles/main.css" rel="stylesheet">
-    <link href="../../styles/sub.css" rel="stylesheet">
+    <link href="../../styles/base/destyle.css" rel="stylesheet">
+    <link href="../../styles/base/base.css" rel="stylesheet">
+    <link href="../../styles/layout/header.css" rel="stylesheet">   
+    <link href="../../styles/layout/footer.css" rel="stylesheet">
+    <link href="../../styles/layout/reference.css" rel="stylesheet">
 
     <title>JavaScript道場 - S.K's Portfolio</title>
 
