update: topページレイアウト、ヘッダー、フッター

--- a/index.html
+++ b/index.html
@@ -28,148 +28,153 @@
   <main>
 
     <section class="hero__section">
-      <div class="hero__section">
-        <h2 class="slogan">
-          <span class="slogan__top">Build the Web</span><br>
-          <span class="slogan__sub">with meaning.</span>
-        </h2>
-        <p class="slogan__explain">
-          ようこそ、S.K's Portfolioへ！<br>
-          このサイトでは私のプロフィール、スキルセット、ポートフォリオ、キャリアの紹介をしています。<br>
-          どうぞごゆっくりご覧ください。
-        </p>
-        <img class="slogan__img" src="images/mountain.svg" alt="mountain image">
-      </div>
+      <h2 class="slogan">
+        <span class="slogan__top">Build the Web</span><br>
+        <span class="slogan__sub">with meaning.</span>
+      </h2>
+      <p class="slogan__explain">
+        ようこそ、S.K's Portfolioへ！<br>
+        このサイトでは私の
+        <br><strong>プロフィール、スキルセット、ポートフォリオ、キャリア</strong><br>
+        の紹介をしています。どうぞごゆっくりご覧ください。
+      </p>
+      <img class="slogan__img" src="images/mountain.svg" alt="mountain image">
     </section>
 
-    <section class="profile__back">
-      <div id="profile">
-        <h2 id="profile__link">Profile</h2>
-        <h3>自己紹介</h3>
-        <p>
-          改めましてS.Kと申します。大学の理工系学科卒業後、システムエンジニアとして6年間従事して参りました。主に業務系のシステムを担当し、運用及び一部開発を経験しました。特にデータベース周りの知識を深めることができました。現在はフロントエンドエンジニアを目指し、HTML、CSS、JavaScriptを中心に学習しております。また、設計にも携われるエンジニアを目指しておりUIやUX、ツール（Figma）について日々勉強しています。生成AIにも興味があり、駆使できる人材を目指しております。<br>皆様どうぞ、よろしくお願いいたします。
-        </p>
-      </div>
+    <section class="profile__section">
+      <h2 id="profile__link">Profile</h2>
+        <div id="profile__layput">
+          <div id="profile__img">※サムネイル予定地</div>
+          <h3>S.K</h3>
+          <p>
+            大学の理工系学科卒業後、システムエンジニアとして6年間従事して参りました。主に業務系のシステムを担当し、運用及び一部開発を経験しました。特にデータベース周りの知識を深めることができました。現在はフロントエンドエンジニアを目指し、HTML、CSS、JavaScriptを中心に学習しております。また、設計にも携われるエンジニアを目指しておりUIやUX、ツール（Figma）について日々勉強しています。生成AIにも興味があり、駆使できる人材を目指しております。<br>皆様どうぞ、よろしくお願いいたします。
+          </p>
+        </div>
         
-        <div id="skills">
-          <h3 id="skills__link">Skill's</h3>
-          <h4>使用言語</h4>
-            <ul class="card">
-              <li class="html card">HTML</li>
-              <li class="css card">CSS</li>
-              <li class="js card">JavaScript</li>
-              <li class="ts card">TypeScript</li>
-              <li class="sql card">SQL<br>PL/SQL</li>
-            </ul>
-          <h4>使用フレームワーク</h4>
-            <ul>
-              <li class="react card">React</li>
-            </ul>
+      <section id="skills__secton">
+        <h3 id="skills__link">Skill's</h3>
+        <h4>使用言語</h4>
+          <ul class="card">
+            <li class="html card">HTML</li>
+            <li class="css card">CSS</li>
+            <li class="js card">JavaScript</li>
+            <li class="ts card">TypeScript</li>
+            <li class="sql card">SQL<br>PL/SQL</li>
+          </ul>
+        <h4>使用フレームワーク</h4>
+          <ul>
+            <li class="react card">React</li>
+          </ul>
 
-          <h4>開発環境</h4>
-            <table>
-              <caption>開発環境についての一覧表</caption>
-              <thead>
-                <tr>
-                  <th>項目</th>
-                  <th>ツール等</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>OS</td>
-                  <td>Windows11</td>
-                </tr>
-                <tr>
-                  <td>エディタ</td>
-                  <td>Visual Studio Code</td>
-                </tr>
-                <tr>
-                  <td>デザインツール</td>
-                  <td>Figma</td>
-                </tr>
-                <tr>
-                  <td>ブラウザ</td>
-                  <td>Google Chrome、FireFox</td>
-                </tr>
-                <tr>
-                  <td>実行環境</td>
-                  <td>Node.js</td>
-                </tr>
-                <tr>
-                  <td>バージョン管理</td>
-                  <td>Git、GitHub</td>
-                </tr>
-                <tr>
-                  <td>プロジェクト管理</td>
-                  <td>GitHub Project</td>
-                </tr>
-                <tr>
-                  <td>AIツール</td>
-                  <td>ChatGPT、Gemini、GitHub Copilot</td>
-                </tr>
-              </tbody>
-            </table>
-
-          <h4>勉強中のもの</h4>
-            <ul class="card">
-              <li class="card">UI</li>
-              <li class="card">UX</li>
-              <li class="card">Figma</li>
-              <li class="card">生成AI</li>
-            </ul>
-
-          <h4>学習に使ったサイト・書籍</h4>
-            <table>
-              <caption>サイト一覧</caption>
-              <thead>
-                <tr>
-                  <th>サイト名</th>
-                  <th>URL</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>ウェブ開発の学習 | MDN</td>
-                  <td><a href="https://developer.mozilla.org/ja/docs/Learn_web_development">https://developer.mozilla.org/ja/docs/Learn_web_development</a></td>
-                </tr>
-              </tbody>
-            </table>
-
+        <h4>開発環境</h4>
           <table>
-            <caption>書籍一覧</caption>
+            <caption>開発環境についての一覧表</caption>
             <thead>
               <tr>
-                <th>書籍名</th>
-                <th>出版社</th>
+                <th>項目</th>
+                <th>ツール等</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>イラスト図解式　この一冊で全部わかるWeb制作と運用の基本</td>
-                <td>SBクリエイティブ</td>
+                <td>OS</td>
+                <td>Windows11</td>
               </tr>
               <tr>
-                <td>この一冊で全部わかる　ChatGPT & Copilotの教科書</td>
-                <td>SBクリエイティブ</td>
+                <td>エディタ</td>
+                <td>Visual Studio Code</td>
+              </tr>
+              <tr>
+                <td>デザインツール</td>
+                <td>Figma</td>
+              </tr>
+              <tr>
+                <td>ブラウザ</td>
+                <td>Google Chrome、FireFox</td>
+              </tr>
+              <tr>
+                <td>実行環境</td>
+                <td>Node.js</td>
+              </tr>
+              <tr>
+                <td>バージョン管理</td>
+                <td>Git、GitHub</td>
+              </tr>
+              <tr>
+                <td>プロジェクト管理</td>
+                <td>GitHub Project</td>
+              </tr>
+              <tr>
+                <td>AIツール</td>
+                <td>ChatGPT、Gemini、GitHub Copilot</td>
               </tr>
             </tbody>
           </table>
-        </div>
-      </div>
+
+        <h4>勉強中のもの</h4>
+          <ul class="card">
+            <li class="card">UI</li>
+            <li class="card">UX</li>
+            <li class="card">Figma</li>
+            <li class="card">生成AI</li>
+          </ul>
+
+        <h4>学習に使ったサイト・書籍</h4>
+          <table>
+            <caption>サイト一覧</caption>
+            <thead>
+              <tr>
+                <th>サイト名</th>
+                <th>URL</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>ウェブ開発の学習 | MDN</td>
+                <td><a href="https://developer.mozilla.org/ja/docs/Learn_web_development">https://developer.mozilla.org/ja/docs/Learn_web_development</a></td>
+              </tr>
+            </tbody>
+          </table>
+
+        <table>
+          <caption>書籍一覧</caption>
+          <thead>
+            <tr>
+              <th>書籍名</th>
+              <th>出版社</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>イラスト図解式　この一冊で全部わかるWeb制作と運用の基本</td>
+              <td>SBクリエイティブ</td>
+            </tr>
+            <tr>
+              <td>この一冊で全部わかる　ChatGPT & Copilotの教科書</td>
+              <td>SBクリエイティブ</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
     </section>
   
     <section class="portfolio">
       <h2 id="portfolio__link">Portfolio</h2>
         <dl>
           <dt>
+             ※サムネイル予定地
+          </dt>
+          <dd>
             <a href="portfolio/html/">HTML Knowledge Notes</a>
-          </dt>
-          <dd>HTMLの学習の中で気づいた点や、注意点をまとめたページです。</dd>
+            <p>HTMLの学習の中で気づいた点や、注意点をまとめたページです。</p>
+          </dd>
           <dt>
-            <a href="portfolio/js/">JavaScript Knowledge Notes</a>
+            ※サムネイル予定地
           </dt>
-          <dd>JavaScriptの学習の中で気づいた点や、注意点をまとめたページです。</dd>
+          <dd>
+            <a href="portfolio/js/">JavaScript Knowledge Notes</a>
+            <p>JavaScriptの学習の中で気づいた点や、注意点をまとめたページです。</p>
+          </dd>
         </dl>
     </section>
 
