update: topページレスポンシブ対応（途中）

--- a/index.html
+++ b/index.html
@@ -38,18 +38,15 @@
         <br><strong>プロフィール、スキルセット、ポートフォリオ、キャリア</strong><br>
         の紹介をしています。どうぞごゆっくりご覧ください。
       </p>
-      <img class="slogan__img" src="images/mountain.svg" alt="mountain image">
     </section>
 
     <section class="profile__section">
       <h2 id="profile__link">Profile</h2>
-        <div id="profile__layput">
-          <div id="profile__img">※サムネイル予定地</div>
-          <h3>S.K</h3>
-          <p>
-            大学の理工系学科卒業後、システムエンジニアとして6年間従事して参りました。主に業務系のシステムを担当し、運用及び一部開発を経験しました。特にデータベース周りの知識を深めることができました。現在はフロントエンドエンジニアを目指し、HTML、CSS、JavaScriptを中心に学習しております。また、設計にも携われるエンジニアを目指しておりUIやUX、ツール（Figma）について日々勉強しています。生成AIにも興味があり、駆使できる人材を目指しております。<br>皆様どうぞ、よろしくお願いいたします。
-          </p>
-        </div>
+        <div id="profile__img">※サムネイル予定地</div>
+        <h3>S.K</h3>
+        <p>
+          大学の理工系学科卒業後、システムエンジニアとして6年間従事して参りました。主に業務系のシステムを担当し、運用及び一部開発を経験しました。特にデータベース周りの知識を深めることができました。現在はフロントエンドエンジニアを目指し、HTML、CSS、JavaScriptを中心に学習しております。また、設計にも携われるエンジニアを目指しておりUIやUX、ツール（Figma）について日々勉強しています。生成AIにも興味があり、駆使できる人材を目指しております。<br>皆様どうぞ、よろしくお願いいたします。
+        </p>
         
       <section id="skills__secton">
         <h3 id="skills__link">Skill's</h3>
@@ -59,7 +56,7 @@
             <li class="css card">CSS</li>
             <li class="js card">JavaScript</li>
             <li class="ts card">TypeScript</li>
-            <li class="sql card">SQL<br>PL/SQL</li>
+            <li class="sql card">SQL</li>
           </ul>
         <h4>使用フレームワーク</h4>
           <ul>
